--- a/j00/ex00/baba.html
+++ b/j00/ex00/baba.html
@@ -7,6 +7,16 @@
   <script src="script.js"></script>
 </head>
 <body style="background-color:pink;">
-    <h1 style = "color: white; text-align: center;">Boutiques en lignes très très stylés</h1>
+    <h1 style="color: white; text-align: center;">Boutiques en lignes très très stylés</h1>
+    <div style="display: inline-block; margin-left: auto; margin-right: auto;">
+        <img src="./img/onlineshop_01.jpg" width="500" height="500">
+        <figcaption style="text-align: center;">https://weedy.fr/</figcaption>
+    </div>
+    <div style="display: inline-block;">
+        <img src="./img/onlineshop_02.jpg" width="500" height="500">
+        <figcaption style="text-align: center;">https://www.planetbonbons.fr/</figcaption>
+    </div>
+    <hr style="border: 4px solid orange;"/>
+    <p style="text-align: right; font-style: italic; font-family: monospace;">©nivernge 2019</p>
 </body>
 </html>
