--- a/j00/ex01/mendeleiev.html
+++ b/j00/ex01/mendeleiev.html
@@ -16,6 +16,7 @@
         {
             padding: 0;
             font-size: 1.5em;
+            font-family: monospace;
             text-align: center;
         }
         .d
@@ -33,7 +34,7 @@
         .al
         {
             border:1px solid black;
-            background-color: rgba(245, 247, 243, 0.795);
+            background-color: rgba(211, 210, 181, 0.815);
         }
         .al_dir
         {
@@ -43,7 +44,7 @@
         .met_poor
         {
             border:1px solid black;
-            background-color: rgba(160, 163, 159, 0.795);
+            background-color: rgba(117, 117, 117, 0.795);
         }
         .met_trans
         {
@@ -83,8 +84,7 @@
     </style>
 </head>
 <body style="background-color: #f0eeee;">
-    <h1 style="color: #5959b8; text-align: center;">Mendeleiev</h1>
-    <center><img src="https://www.telegraph.co.uk/content/dam/technology/2016/02/07/dmitrimendelev_trans_NvBQzQNjv4BqVaEzIOIwv0yCR1SNh5YOKq1cHhalxiicmCqqzJ0GpSs.jpg?imwidth=450" width="800" height="500"></center>
+    <h1 style="color: #f0a417ad; text-align: center; font-size: 300%; font-family: monospace">Mendeleiev</h1>
     <div style="display: flex; justify-content: center;">
         <table>
 
@@ -209,7 +209,7 @@
                 <th width="80px" height="50px" class="met_poor"><p class="u">204.38</p><p class="m">Tl</p><p class="d">31</p></th>
                 <th width="80px" height="50px" class="met_poor"><p class="u">207.20</p><p class="m">Pb</p><p class="d">32</p></th>
                 <th width="80px" height="50px" class="met_poor"><p class="u">208.96</p><p class="m">Bi</p><p class="d">33</p></th>
-                <th width="80px" height="50px" class="not_met"><p class="u">210.00</p><p class="m">Po</p><p class="d">34</p></th>
+                <th width="80px" height="50px" class="met"><p class="u">210.00</p><p class="m">Po</p><p class="d">34</p></th>
                 <th width="80px" height="50px" class="hallo"><p class="u">210.00</p><p class="m">At</p><p class="d">35</p></th>
                 <th width="80px" height="50px" class="rar_gaz"><p class="u">220.00</p><p class="m">Rn</p><p class="d">36</p></th>
             </tr>
@@ -278,6 +278,9 @@
                 </tr>
 
         </table>
+    </div>
+    <div style="display: flex; justify-content: center; padding-top: 2%;">
+    <img src="https://www.telegraph.co.uk/content/dam/technology/2016/02/07/dmitrimendelev_trans_NvBQzQNjv4BqVaEzIOIwv0yCR1SNh5YOKq1cHhalxiicmCqqzJ0GpSs.jpg?imwidth=450" width="800" height="500">
     </div>
 </body>
 </html>
