--- a/j00/ex02/doft.html
+++ b/j00/ex02/doft.html
@@ -7,10 +7,16 @@
 </head>
 <body style="background-color: #242424c9;"">
     <div class="day_of_the_42_div">
-        <img src="resources/day_of_the_42.png" class="day_of_the_42_img">
-        <img src="resources/reload.png" class="day_of_the_42_img" style="width: 40px; height: 40px; position: relative; top:0; right:0;">
-        <img src="resources/loupe.png" class="day_of_the_42_img" style="">
-        <img src="resources/close.gif" class="day_of_the_42_img" style="">
+            <div>
+                <img src="resources/day_of_the_42.png" class="day_of_the_42_img">
+            </div>
+            <div style="margin-left: 70%; margin-bottom: -20%;">
+                <img src="resources/loupe.png" class="day_of_the_42_img" style="width: 250px; height: 170px;">
+            </div>
+            <div style="margin-left: 1%">
+                <img src="resources/reload.png" class="day_of_the_42_img" style="width: 20px; height: 20px; margin-top: 30%;">
+                <img src="resources/close.gif" class="day_of_the_42_img" style="width: 20px; height: 20px; margin-top: 410%;">
+            </div>
     </div>
     <div class="main_div">
         <div class="left_div">
@@ -27,6 +33,9 @@
             <img src="resources/book.png" style="width: 100px; height: 100px;" class="img_right">
             <img src="resources/towel.png" style="width: 70px; height: 70px; padding-left: 15px;" class="img_right">
             <div style="width: 100px; height: 60px; background-repeat: repeat; background: url(resources/brick.jpg); margin-left: 25px; margin-right: 25px"></div>
+        </div>
+        <div>
+            
         </div>
     </div>
 </body>
