--- a/j00/ex02/doft.html
+++ b/j00/ex02/doft.html
@@ -8,35 +8,48 @@
 <body style="background-color: #242424c9;"">
     <div class="day_of_the_42_div">
             <div>
-                <img src="resources/day_of_the_42.png" class="day_of_the_42_img">
+                <img src="resources/day_of_the_42.png" class="day_of_the_42_img" alt="42" title="42">
             </div>
             <div style="margin-left: 70%; margin-bottom: -20%;">
-                <img src="resources/loupe.png" class="day_of_the_42_img" style="width: 250px; height: 170px;">
+                <img src="resources/loupe.png" class="day_of_the_42_img" style="width: 250px; height: 170px;" alt="loupe" title="loupe">
             </div>
             <div style="margin-left: 1%">
-                <img src="resources/reload.png" class="day_of_the_42_img" style="width: 20px; height: 20px; margin-top: 30%;">
-                <img src="resources/close.gif" class="day_of_the_42_img" style="width: 20px; height: 20px; margin-top: 410%;">
+                <a href="https://disney.fr/">
+                    <img src="resources/reload.png" class="day_of_the_42_img" style="width: 20px; height: 20px; margin-top: 30%;" alt="Recommencer au début" title="Recommencer au début">
+                </a>
+                <a href="https://www.relaischateaux.com/fr/">
+                    <img src="resources/close.gif" class="day_of_the_42_img" style="width: 20px; height: 20px; margin-top: 410%;" alt="Déconnecter" title="Déconnecter">
+                </a>
             </div>
     </div>
     <div class="main_div">
         <div class="left_div">
-            <img src="resources/arrow.png" style="width: 80px; height: 80px;" class="img_left">
-            <img src="resources/main.png" style="width: 80px; height: 80px;" class="img_left">
-            <img src="resources/oeil.png" style="width: 80px; height: 80px; border: 5px solid red; padding: 2px;" class="img_left">
-            <img src="resources/outil.png" style="width: 80px; height: 80px;" class="img_left">
-            <img src="resources/chat-icon.png" style="width: 80px; height: 80px;" class="img_left">
+            <img src="resources/arrow.png" style="width: 80px; height: 80px;" class="img_left" alt="Avancer" title="Avancer">
+            <img src="resources/main.png" style="width: 80px; height: 80px;" class="img_left" alt="Prendre" title="Prendre">
+            <img src="resources/oeil.png" style="width: 80px; height: 80px; border: 5px solid red; padding: 2px;" class="img_left" alt="Regarder" title="Regarder">
+            <img src="resources/outil.png" style="width: 80px; height: 80px;" class="img_left" alt="Utiliser" title="Utiliser">
+            <img src="resources/chat-icon.png" style="width: 80px; height: 80px;" class="img_left" alt="Parler" title="Parler">
         </div>
         <div class="cluster_div">
-            <img src="resources/cluster.jpg" class="cluster_img">
+            <img src="resources/cluster.jpg" class="cluster_img" alt="cluster" title="cluster"  usemap="#cluster">
         </div>
         <div class="right_div">
-            <img src="resources/book.png" style="width: 100px; height: 100px;" class="img_right">
-            <img src="resources/towel.png" style="width: 70px; height: 70px; padding-left: 15px;" class="img_right">
-            <div style="width: 100px; height: 60px; background-repeat: repeat; background: url(resources/brick.jpg); margin-left: 25px; margin-right: 25px"></div>
-        </div>
-        <div>
-            
+            <img src="resources/book.png" style="width: 100px; height: 100px;" class="img_right" alt="book" title="book">
+            <img src="resources/towel.png" style="width: 70px; height: 70px; padding-left: 15px;" class="img_right" alt="towel" title="towel">
+            <div style="width: 100px; height: 60px; background-repeat: repeat; background: url(resources/brick.jpg); margin-left: 25px; margin-right: 25px" alt="brick" title="brick"></div>
         </div>
     </div>
+    <div class="green_box">
+        <p>Vous <span style="font-size: 40px;">entrez</span> alors dans une grande piece remplie <span style="text-shadow: 0.2em 0.3em 0.1em red;">d'ordinateurs</span>...</p>
+        <em>- Bonjour, vous êtes nouveau ici?</em>
+        <form action="">
+            <input type="text" style="width: 430px;">
+            <input type="submit" value="Repondre" style="width: 100px; height: 25px;">
+        </form>
+    </div>
+    <map name="cluster">
+        <area shape="rect" coords="300,400,500,700" href="http://www.ikea.com" alt="Ikea">
+        <area shape="rect" coords="800,400,1000,550" href="http://www.apple.com" alt=Apple>
+    </map>
 </body>
 </html>
