--- a/j00/ex03/responsive.html
+++ b/j00/ex03/responsive.html
@@ -8,7 +8,7 @@
 <body style="background-color: #f0eeee;">
     <h1 style="color: #f0a417ad; text-align: center; font-size: 300%; font-family: monospace">Mendeleiev</h1>
     <div style="display: flex; justify-content: center;">
-        <table>
+        <table contenteditable="true">
             <tr>
               <th width="10px" height="50px" class="not_met"><p class="u">1.00</p><p class="m">H</p><p class="d">1</p></th>
               <th width="10px" height="50px">&nbsp;</th>
@@ -134,7 +134,7 @@
                 <th width="80px" height="50px" class="al_dir"><p class="u">226.00</p><p class="m">Ra</p><p class="d">20</p></th>
                 <th width="80px" height="50px" class="met_trans"><p class="m" style="font-size: 10px;"">actinides</p></th>
                 <th width="80px" height="50px" class="met_trans"><p class="u">261.00</p><p class="m">Rf</p><p class="d">22</p></th>
-                <th width="80px" height="50px" class="met_trans"><p class="u">262.00/p><p class="m">Db</p><p class="d">23</p></th>
+                <th width="80px" height="50px" class="met_trans"><p class="u">262.00</p><p class="m">Db</p><p class="d">23</p></th>
                 <th width="80px" height="50px" class="met_trans"><p class="u">266.00</p><p class="m">Sg</p><p class="d">24</p></th>
                 <th width="80px" height="50px" class="met_trans"><p class="u">264.00</p><p class="m">Bh</p><p class="d">25</p></th>
                 <th width="80px" height="50px" class="met_trans"><p class="u">277.00</p><p class="m">Hs</p><p class="d">26</p></th>
