--- a/j09/ex01/calc.html
+++ b/j09/ex01/calc.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>Titre de la page</title>
+        <title>calc</title>
         <style>
         #calc
         {
@@ -14,6 +14,7 @@
         }
         </style>
         <script>
+            setInterval(function(){alert("please, use me...");}, 30000);
             function add (first, second)
             {
                 var res = first + second;
