--- a/j09/ex02/index.html
+++ b/j09/ex02/index.html
@@ -1,29 +1,13 @@
-<!doctype html>
-<head>
-  <title>todo</title>
-  <script src="todo.js"></script>
-</head>
-    <style>
-        #ft_list
-        {
-    		margin-top : 21%;
-            margin-left: auto;
-    		margin-right: auto;
-            width: 200px;
-    		height: 200px;
-        }
-        .buffon
-        {
-    		margin-top : 21%;
-            margin-left: auto;
-    		margin-right: auto;
-            width: 200px;
-    		height: 200px;
-        }
-    </style>
-<body>
-    <div id="ft_list">
-            <button onclick="add();">New</button>
-    </div>
-</body>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>To do or not to do</title>
+		<meta charset="UTF-8"/>
+		<script src="todo.js"></script>
+	</head>
+	<body>
+		<div id="ft_list">
+            <button onclick="prompt_new()">New</button>
+		</div>
+	</body>
 </html>
