--- a/j00/ex01/mendeleiev.html
+++ b/j00/ex01/mendeleiev.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Mendeleiev</title>
 </head>
-<body style="background-color: #f0eeee;">
+<body>
     <h1 style="color: #f0a417ad; text-align: center; font-size: 300%; font-family: monospace">Mendeleiev</h1>
-    <div style="display: flex; flex-direction:row; width:100%; justify-content: center;">
+    <div id="mandeleiv-table">
         <table contenteditable="true">
 
             <tr>
@@ -202,96 +202,135 @@
     </div>
     
     <div style="display: flex; justify-content: center; padding-top: 2%;">
-    <img src="https://www.telegraph.co.uk/content/dam/technology/2016/02/07/dmitrimendelev_trans_NvBQzQNjv4BqVaEzIOIwv0yCR1SNh5YOKq1cHhalxiicmCqqzJ0GpSs.jpg?imwidth=450" width="800" height="500">
+        <img src="https://www.telegraph.co.uk/content/dam/technology/2016/02/07/dmitrimendelev_trans_NvBQzQNjv4BqVaEzIOIwv0yCR1SNh5YOKq1cHhalxiicmCqqzJ0GpSs.jpg?imwidth=450" width="800" height="500">
     </div>
-    <style>
-            body
-            {
-		        font-family: 'VT323', monospace;
-		        display: flex;
-		        align-items: center;
-		        flex-direction: column;
-		        justify-content: center;
-		        background-color: #222831;
-		        color: black;
-	        }
-            .u
-            {
-                margin: 0;
-                padding-top: 0;
-                font-size: 10px;
-                text-align: right;
-                vertical-align: top;
-            }
-            .m
-            {
-                padding: 0;
-                font-size: 1.5em;
-                font-family: monospace;
-                text-align: center;
-            }
-            .d
-            {
-                margin: 0;
-                padding-bottom: 0;
-                font-size: 10px;
-                text-align: left;
-                vertical-align: bottom;
-            }
-            .invisible
-            {
-                border: 0px;
-            }
-            .al
-            {
-                border:1px solid black;
-                background-color: rgba(211, 210, 181, 0.815);
-            }
-            .al_dir
-            {
-                border:1px solid black;
-                background-color: rgba(155, 84, 37, 0.795);
-            }
-            .met_poor
-            {
-                border:1px solid black;
-                background-color: rgba(117, 117, 117, 0.795);
-            }
-            .met_trans
-            {
-                border:1px solid black;
-                background-color: rgba(172, 112, 23, 0.795);
-            }
-            .met
-            {
-                border:1px solid black;
-                background-color: rgba(81, 134, 56, 0.795);
-            }
-            .not_met
-            {
-                border:1px solid black;
-                background-color: rgba(132, 196, 103, 0.795);
-            }
-            .hallo
-            {
-                border:1px solid black;
-                background-color: rgba(68, 77, 158, 0.795);
-            }
-            .rar_gaz
-            {
-                border:1px solid black;
-                background-color: rgba(226, 174, 32, 0.795);
-            }
-            .lanthanides
-            {
-                border:1px solid black;
-                background-color: rgba(226, 174, 32, 0.795);
-            }
-            .actinides
-            {
-                border:1px solid black;
-                background-color: rgba(226, 174, 32, 0.795);
-            }
-        </style>
 </body>
+<style>
+    body
+    {
+        font-family: monospace;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        background-color: #f0eeee;
+        color: black;
+    }
+    #mandeleiv-table
+    {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
+    #mandeleiv-table table 
+    {
+		width: 80%;
+        height: 80%;
+    	margin: 0;
+    }
+    .th
+    {
+        width: 3%;
+        height: 6%;
+        padding: 0 0.3%;
+        font-size: 0.6vw;
+    }
+	.th p 
+    {
+        margin: 0;
+    }
+	.th .u 
+    {
+    	text-align: right;
+    }
+    .th .m 
+    {
+    	text-align: center;
+    	margin: 25% 0;
+    	font-size: 0.9vw;
+	}
+	.th .d 
+    {
+        text-align: left;
+    }
+    .u
+    {
+        margin: 0;
+        padding-top: 0;
+        font-size: 1vh;
+        text-align: right;
+        vertical-align: top;
+    }
+    .m
+    {
+        padding: 0;
+        font-size: 1vh;
+        font-family: monospace;
+        text-align: center;
+    }
+    .d
+    {
+        margin: 0;
+        padding-bottom: 0;
+        font-size: 1vh;
+        text-align: left;
+        vertical-align: bottom;
+    }
+    .invisible
+    {
+        border: 0px;
+    }
+    .al
+    {
+        border:1px solid black;
+        background-color: rgba(211, 210, 181, 0.815);
+    }
+    .al_dir
+    {
+        border:1px solid black;
+        background-color: rgba(155, 84, 37, 0.795);
+    }
+    .met_poor
+    {
+        border:1px solid black;
+        background-color: rgba(117, 117, 117, 0.795);
+    }
+    .met_trans
+    {
+        border:1px solid black;
+        background-color: rgba(172, 112, 23, 0.795);
+    }
+    .met
+    {
+        border:1px solid black;
+        background-color: rgba(81, 134, 56, 0.795);
+    }
+    .not_met
+    {
+        border:1px solid black;
+        background-color: rgba(132, 196, 103, 0.795);
+    }
+    .hallo
+    {
+        border:1px solid black;
+        background-color: rgba(68, 77, 158, 0.795);
+    }
+    .rar_gaz
+    {
+        border:1px solid black;
+        background-color: rgba(226, 174, 32, 0.795);
+    }
+    .lanthanides
+    {
+        border:1px solid black;
+        background-color: rgba(226, 174, 32, 0.795);
+    }
+    .actinides
+    {
+        border:1px solid black;
+        background-color: rgba(226, 174, 32, 0.795);
+    }
+</style>
 </html>
