--- a/j00/ex05/five.html
+++ b/j00/ex05/five.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>One</title>
+  <title>Five</title>
   <link rel="stylesheet" type="text/css" href="scumm.css">
 </head>
 <body style="background-color: #242424c9;">
@@ -24,15 +24,14 @@
     </div>
     <div class="main_div">
         <div class="left_div">
-            <a href="file:///Users/nivergne/42_Nico/42_gitlab/ongoing/piscine_php/j00/ex05/one.html"><img src="resources/arrow.png" style="width: 80px; height: 80px;" class="img_left" alt="Avancer" title="Avancer"></a>
-            <a href="file:///Users/nivergne/42_Nico/42_gitlab/ongoing/piscine_php/j00/ex05/one_bis.html"><img src="resources/img_planet/phoenix" style="width: 80px; height: 80px;" class="img_left" alt="Prendre" title="Prendre"></a>
-            
+            <a href="file:///Users/nivergne/42_Nico/42_gitlab/ongoing/piscine_php/j00/ex05/scumm.html"><img src="resources/arrow.png" style="width: 80px; height: 80px;" class="img_left" alt="Avancer" title="Avancer"></a>
+            <img src="resources/main.png" style="width: 80px; height: 80px;" class="img_left" alt="Prendre" title="Prendre">
             <img src="resources/oeil.png" style="width: 80px; height: 80px; border: 5px solid red; padding: 2px;" class="img_left" alt="Regarder" title="Regarder">
             <img src="resources/outil.png" style="width: 80px; height: 80px;" class="img_left" alt="Utiliser" title="Utiliser">
             <img src="resources/chat-icon.png" style="width: 80px; height: 80px;" class="img_left" alt="Parler" title="Parler">
         </div>
         <div class="cluster_div">
-            <img src="resources/img_planet/one" class="one" alt="one" title="one"  usemap="#one">
+            <img src="resources/img_planet/five" class="five" alt="five" title="five"  usemap="#five">
         </div>
         <div class="right_div">
             <img src="resources/book.png" style="width: 100px; height: 100px;" class="img_right" alt="book" title="book">
@@ -41,7 +40,7 @@
         </div>
     </div>
     <div class="green_boxx">
-        <p>planete explose</br></br>cherchez le phoenix</p>
+        <p>wtf ???</p>
     </div>
     <map name="cluster">
         <area shape="rect" coords="300,400,500,700" href="http://www.ikea.com" alt="Ikea">
@@ -49,4 +48,3 @@
     </map>
 </body>
 </html>
-
