--- a/j00/ex05/scumm.html
+++ b/j00/ex05/scumm.html
@@ -24,7 +24,7 @@
     </div>
     <div class="main_div">
         <div class="left_div">
-            <img src="resources/arrow.png" style="width: 80px; height: 80px;" class="img_left" alt="Avancer" title="Avancer">
+            <a href="file:///Users/nivergne/42_Nico/42_gitlab/ongoing/piscine_php/j00/ex05/one.html"><img src="resources/arrow.png" style="width: 80px; height: 80px;" class="img_left" alt="Avancer" title="Avancer"></a>
             <img src="resources/main.png" style="width: 80px; height: 80px;" class="img_left" alt="Prendre" title="Prendre">
             <img src="resources/oeil.png" style="width: 80px; height: 80px; border: 5px solid red; padding: 2px;" class="img_left" alt="Regarder" title="Regarder">
             <img src="resources/outil.png" style="width: 80px; height: 80px;" class="img_left" alt="Utiliser" title="Utiliser">
