--- a/j09/ex02bis/index.html
+++ b/j09/ex02bis/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>To do or not to do</title>
+		<title>To do or not to do bis</title>
 		<meta charset="UTF-8"/>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script type="text/javascript" src="todo.js"></script>
 	</head>
 	<body>
